0.3.0 ()
=====
* Add smarter buffer API to avoid copies.
* Cleanup C thread management.
* Cleanup gst_buf management.

0.2.3 (2017-04-11)
=====
* Added timeout to Bus.timed_pop_filtered.
* Added datetime tag support.

0.2.2 (2016-06-29)
=====
* Added Element.duration.
* Added App_src.push_buffer_data.
* Completed message types.

0.2.1 (2015-08-03)
=====
* Dummy github release.

0.2.0 (2013-02-19)
=====
* Complete rewrite to get rid of OCamlIDL, lots of modules added.

0.1.0 (2011-10-04)
=====
* Initial release.